# kl3m-model-research

./: pyproject.toml
models/kl3m-002-170m/: README.md  config.json  tokenizer_config.json
models/kl3m-002-170m-patent/: README.md  config.json  generation_config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
models/kl3m-003-1.7b/: README.md  config.json  generation_config.json  model.safetensors.index.json  special_tokens_map.json  tokenizer_config.json
models/kl3m-003-3.7b/: README.md  config.json  generation_config.json  model.safetensors.index.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
scripts/: upload_models.py
